<resources>
    <!-- Google Ads -->
    <string name="banner_ads">ca-app-pub-7450127230297437/9431583600</string>
    <string name="interstitial_ads">ca-app-pub-7450127230297437/8060589702</string>

    <string name="app_name">Lotin Kirill - Kirill Lotin</string>
    <string name="tap_to_type">Yozish uchun bosing…</string>
    <string name="email">Email:</string>
    <string name="conamobiledev_gmail_com">conamobiledev@gmail.com</string>
    <string name="company">Company:</string>
    <string name="cona_mobile">Cona Mobile</string>
    <string name="telegram">Telegram:</string>
    <string name="cona_mobile2">\@Cona_Mobile</string>
    <string name="results">Natija…</string>
    <string name="paste">Qo\'yish</string>
    <string name="copy">Nusxalash</string>
    <string name="copied">Nusxalandi</string>
    <string name="fio">Nurmuhammad Obidjonov</string>
    <string name="text_size_edit">Yozuvlar hajmini o\'zgartirish</string>
    <string name="soo_little">Juda\nKichik</string>
    <string name="little">Kichik</string>
    <string name="normal">O`rtacha</string>
    <string name="big">Katta</string>
    <string name="soo_big">Juda\nKatta</string>
    <string name="empty">Bo`sh</string>
    <string name="pasted">Qo`yildi</string>
    <string name="cleared">Tozalandi</string>
    <string name="flash_on">On</string>
    <string name="flash_off">Off</string>
    <string name="company_name">Cona</string>
    <string name="company_username">Mobile</string>
    <string name="text_not_found">Bu rasmda yozuv topilmadi!</string>
    <string name="please_check_internet">Iltmos internet yoki wifi tarmog\'ini ulang va ilovaga qaytadan kiring!</string>
    <string name="select_gallery">Galereyadan tanlash</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="turn_on_night_mode">Tungi rejimni yoqish</string>
    <string name="turn_off_night_mode">Tungi rejimni o`chirish</string>
    <string name="loading">Yuklanmoqda…</string>
    <string name="back">Ortga</string>
    <string name="attention">Diqqat!!!</string>
    <string name="message">Hotiraga Nusxalansinmi?</string>
    <string name="cancel">yo`q</string>
    <string name="yes">ha</string>
    <string name="input_text">Avval biror narsa yozing!</string>
    <string name="allow_camera_permission">Iltmos kameraga ruxsat bering!</string>
    <string name="all_image">Barcha Rasmlar</string>
    <string name="select_any_image">Iltmos bironta rasm tanlang!</string>
    <string name="def_camera">Kamera</string>
    <string name="camerax">CameraX</string>
    <string name="allow_storage">Iltmos xotiraga ruxsat bering!</string>
    <string name="allow_storage_permissions">Siz xotira uchun ruxsat bermagansiz <i>\'Sozlamalarga o\'tish\'</i> tugmasini bosing va xotira uchun ruxsat bering!</string>
    <string name="allow_storage_permissions_text">Sozlamalarga o\'tish</string>
</resources>