<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CameraXActivity">

    <androidx.camera.view.CameraView
        android:id="@+id/cameraView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:captureMode="mixed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lensFacing="back"
        app:pinchToZoomEnabled="false" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/resultTvCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/transparent_card"
        android:visibility="gone"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/captureBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/cardCorner">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnim"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.6"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading_anim" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/resultText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/allerta"
                        android:textColor="@color/yellow"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/flashBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/transparent_dark"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/captureBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/captureBtn"
        app:layout_constraintTop_toTopOf="@id/captureBtn"
        app:shapeAppearanceOverlay="@style/circular">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/flashImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:src="@drawable/flash_off" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/captureBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="70dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/replaceBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/transparent_dark"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/captureBtn"
        app:layout_constraintLeft_toRightOf="@id/captureBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/captureBtn"
        app:shapeAppearanceOverlay="@style/circular">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/replaceImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:src="@drawable/replace_png" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/galleryBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/transparent_dark"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:shapeAppearanceOverlay="@style/circular">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:src="@drawable/gallery_png" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/galleryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/select_gallery"
        android:textColor="@color/yellow"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/galleryBtn"
        app:layout_constraintLeft_toRightOf="@id/galleryBtn"
        app:layout_constraintTop_toTopOf="@id/galleryBtn" />

    <yanzhikai.textpath.SyncTextPathView
        android:id="@+id/company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:duration="5000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/company_username"
        app:showPainter="true"
        app:text="@string/company_name"
        app:textInCenter="true"
        app:textSize="25sp" />

    <yanzhikai.textpath.AsyncTextPathView
        android:id="@+id/company_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:duration="5000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:showPainter="true"
        app:text="@string/company_username"
        app:textInCenter="true"
        app:textSize="25sp" />

</androidx.constraintlayout.widget.ConstraintLayout>